syntax = "proto3";
package kepler.job;

option go_package = "kepler/x/job/types";

// Job structure
message Job {
  // job result status
  enum Status {
    // unknown status
    STATUS_UNSPECIFIED = 0;
    // succeed status
    STATUS_EXECUTED = 1;
    // failed status
    STATUS_FAILED = 2;
    // invalid status. means that smth wrong happened and committee didnt sign it
    STATUS_INVALID = 3;
  }

  // job id
  uint64 id = 1;
  // job status
  Status status = 2;
  // target chain id
  string chain_id = 3;
  // presented if job was created by automation workflow
  uint64 automation_id = 4;
  // presented if job was successful
  string tx_hash = 5;
  // additional info about reason of failure etc
  bytes metadata = 6;
  // address of executor
  string executor_address = 7;
  // job executors committee id
  string committee_id = 8;
  // signs of committee participants
  repeated bytes signs = 9;
  // unix seconds time when created
  uint64 created_at = 10;
  // unix seconds time when executed or failed
  uint64 executed_at = 11;
  // unix seconds time when signed
  uint64 signed_at = 12;
}
